--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -23,3 +23,7 @@ monolog:
             level: debug
         console:
             type:  console
+
+twig:
+    globals:
+       webRootDir: "/www/web/app.php/"
