--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -28,6 +28,8 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    globals:
+       kernelRootDir: "%kernel.root_dir%"
 
 # Assetic Configuration
 assetic:
