--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,7 +2,7 @@ easanles_atletismo:
     resource: "@EasanlesAtletismoBundle/Resources/config/routing.yml"
     prefix:   /
 
-acme_hello:
-    resource: "@AcmeHelloBundle/Resources/config/routing.yml"
-    prefix:   /
+#acme_hello:
+#    resource: "@AcmeHelloBundle/Resources/config/routing.yml"
+#    prefix:   /
 
