--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -30,6 +30,9 @@ twig:
     strict_variables: "%kernel.debug%"
     globals:
        kernelRootDir: "%kernel.root_dir%"
+    form:
+       resources: ['bootstrap_3_layout.html.twig']
+       #resources: ['bootstrap_3_horizontal_layout.html.twig']
 
 # Assetic Configuration
 assetic:
