--- a/src/Easanles/AtletismoBundle/Resources/config/services.yml
+++ b/src/Easanles/AtletismoBundle/Resources/config/services.yml
@@ -1,4 +1,12 @@
 services:
-#    easanles_atletismo.example:
-#        class: Easanles\AtletismoBundle\Example
-#        arguments: [@service_id, "plain_value", %parameter%]
+#  em_com_service:
+#    class: Easanles\AtletismoBundle\Entity\Competicion
+#    arguments: ["@doctrine.orm.default_entity_manager"]
+
+    
+#  easanles_atletismo.example:
+#     class: Easanles\AtletismoBundle\Example
+#     arguments: [@service_id, "plain_value", %parameter%]
+     
+     
+     
