--- a/src/Easanles/AtletismoBundle/Resources/config/routing.yml
+++ b/src/Easanles/AtletismoBundle/Resources/config/routing.yml
@@ -9,7 +9,7 @@ symfony_demo:
    defaults: {_controller: "AcmeDemoBundle:Demo:index"}
     
 listado_competiciones: #portada competiciones
-    path: /competiciones/
+    path: /competiciones
     defaults: {_controller: "EasanlesAtletismoBundle:Competicion:listadoCompeticiones"}
 crear_competicion:
     path: /competiciones/nuevo/
