Editar/caducar categorias e integrarlas en pruebas

--- a/src/Easanles/AtletismoBundle/Resources/config/routing.yml
+++ b/src/Easanles/AtletismoBundle/Resources/config/routing.yml
@@ -64,6 +64,12 @@ listado_categorias:
 crear_categoria:
    path: /configuracion/categoria/nuevo
    defaults: {_controller: "EasanlesAtletismoBundle:Categoria:crearCategoria"}
+editar_categoria:
+   path: /configuracion/categoria/editar/{id}
+   defaults: {_controller: "EasanlesAtletismoBundle:Categoria:editarCategoria"}
+caducar_categoria:
+   path: /configuracion/categoria/caducar
+   defaults: {_controller: "EasanlesAtletismoBundle:Categoria:caducarCategoria"}   
 
 
 #====================CONFIGURACION===================
