--- a/src/Easanles/AtletismoBundle/Resources/config/validation.yml
+++ b/src/Easanles/AtletismoBundle/Resources/config/validation.yml
@@ -98,15 +98,11 @@ Easanles\AtletismoBundle\Entity\Prueba:
            message: Este campo no debe estar en blanco
      idCat:
         - NotNull: 
-           message: Este dato no debe ser nulo
-        - NotBlank: 
-           message: Este campo no debe estar en blanco
+           message: Seleccione una categoría
 
 Easanles\AtletismoBundle\Entity\Categoria:
   properties:
      nombre:
-        - NotNull: 
-           message: Este dato no debe ser nulo
         - NotBlank: 
            message: Este campo no debe estar en blanco
      edadMax:
@@ -123,15 +119,6 @@ Easanles\AtletismoBundle\Entity\Categoria:
         - GreaterThan:
            value: 0
            message: Introduzca un valor mayor a 0
-        - NotNull: 
-           message: Este dato no debe ser nulo
         - NotBlank: 
            message: Este campo no debe estar en blanco
-     tFinVal:
-        - Type: 
-           type: Integer
-           message: Este valor debe ser un número entero
-        - GreaterThan:
-           value: 0
-           message: Introduzca un valor mayor a 0
         
